--- a/index.ipynb
+++ b/index.ipynb
@@ -44,12 +44,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Animal(object):\n",
-    "    "
+    "    def __init__(self, name, weight, size=None, species=None, food_type=None, nocturnal=None):\n",
+    "        self.name = name\n",
+    "        self.size = size\n",
+    "        self.weight = weight\n",
+    "        self.species = species\n",
+    "        self.food_type = food_type\n",
+    "        self.nocturnal = nocturnal\n",
+    "        \n",
+    "    def sleep(self):\n",
+    "        if self.nocturnal:\n",
+    "            print(f\"{self.name} the {self.species} sleeps during the day.\")\n",
+    "        else:\n",
+    "            print(f\"{self.name} the {self.species} sleeps at night.\")\n",
+    "            \n",
+    "    def eat(self, food=None):\n",
+    "        if food == 'plants':\n",
+    "            print(f\"{self.name} the {self.species} thinks {food} is yummy!\")\n",
+    "        elif food == 'meat':\n",
+    "            print(f'{self.name} the {self.species} thinks {food} is yummy!')\n",
+    "        else:\n",
+    "            print(f\"I don't eat this!\")\n",
+    "        "
    ]
   },
   {
@@ -71,12 +92,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Elephant(Animal):\n",
-    "    pass"
+    "    def __init__(self, name, weight):\n",
+    "        super().__init__(name, weight)\n",
+    "        self.species = 'elephant'\n",
+    "        self.size = 'enormous'\n",
+    "        self.food_type = 'herbivore'\n",
+    "        self.nocturnal = False"
    ]
   },
   {
@@ -94,12 +120,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Tiger(Animal):\n",
-    "    pass"
+    "    def __init__(self, name, weight):\n",
+    "        super().__init__(name, weight)\n",
+    "        self.species = 'tiger'\n",
+    "        self.size = 'large'\n",
+    "        self.food_type = 'carnivore'\n",
+    "        self.nocturnal = True"
    ]
   },
   {
@@ -117,12 +148,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Raccoon(Animal):\n",
-    "    pass"
+    "    def __init__(self, name, weight):\n",
+    "        super().__init__(name, weight)\n",
+    "        self.species = 'raccoon'\n",
+    "        self.size = 'small'\n",
+    "        self.food_type = 'omnivore'\n",
+    "        self.nocturnal = True"
    ]
   },
   {
@@ -140,12 +176,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Gorilla(Animal):\n",
-    "    pass"
+    "    def __init__(self, name, weight):\n",
+    "        super().__init__(name, weight)\n",
+    "        self.species = 'gorilla'\n",
+    "        self.size = 'large'\n",
+    "        self.food_type = 'herbivore'\n",
+    "        self.nocturnal = False"
    ]
   },
   {
@@ -173,12 +214,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
+    "zoo = []\n",
+    "\n",
     "def add_animal_to_zoo(zoo, animal_type, name, weight):\n",
-    "    pass"
+    "    if animal_type == 'Elephant':\n",
+    "        animal = Elephant(name, weight)\n",
+    "    elif animal_type == 'Gorilla':\n",
+    "        animal = Gorilla(name, weight)\n",
+    "    elif animal_type == 'Raccoon':\n",
+    "        animal = Raccoon(name, weight)\n",
+    "    elif animal_type == 'Tiger':\n",
+    "        animal = Tiger(name, weight)\n",
+    "    else:\n",
+    "        print(f\"Unknown animal type: {animal_type}\")\n",
+    "        return zoo  # If the animal type is invalid, return the zoo unchanged\n",
+    "\n",
+    "    # Append the newly created animal to the zoo\n",
+    "    zoo.append(animal)\n",
+    "    \n",
+    "    # Return the updated zoo\n",
+    "    return zoo\n"
    ]
   },
   {
@@ -197,11 +256,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create your animals and add them to the 'zoo' in this cell!"
+    "# Create your animals and add them to the 'zoo' in this cell!\n",
+    "\n",
+    "zoo = add_animal_to_zoo(zoo, 'Elephant', 'Elee', 3000)\n",
+    "zoo = add_animal_to_zoo(zoo, 'Elephant', 'Phanto', 5000)\n",
+    "zoo = add_animal_to_zoo(zoo, 'Raccoon', 'Rac', 10)\n",
+    "zoo = add_animal_to_zoo(zoo, 'Raccoon', 'Coon', 15)\n",
+    "zoo = add_animal_to_zoo(zoo, 'Gorilla', 'Gorrie', 150)\n",
+    "zoo = add_animal_to_zoo(zoo, 'Tiger', 'Tig', 200)\n",
+    "zoo = add_animal_to_zoo(zoo, 'Tiger', 'Tiggy', 150)\n",
+    "zoo = add_animal_to_zoo(zoo, 'Tiger', 'Iggy', 250)\n"
    ]
   },
   {
@@ -223,12 +291,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "def feed_animals(zoo, time='Day'):\n",
-    "    pass"
+    "    for animal in zoo:\n",
+    "        if (animal.nocturnal == False and time =='Day') or (animal.nocturnal == True and time =='Night'):\n",
+    "            if animal.food_type == 'carnivore':\n",
+    "                food = 'meat'\n",
+    "                animal.eat(food)\n",
+    "            else:\n",
+    "                food = 'plants'\n",
+    "                animal.eat(food)"
    ]
   },
   {
@@ -240,10 +315,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elee the elephant thinks plants is yummy!\n",
+      "Phanto the elephant thinks plants is yummy!\n",
+      "Gorrie the gorilla thinks plants is yummy!\n"
+     ]
+    }
+   ],
+   "source": [
+    "feed_animals(zoo)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -256,10 +343,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rac the raccoon thinks plants is yummy!\n",
+      "Coon the raccoon thinks plants is yummy!\n",
+      "Tig the tiger thinks meat is yummy!\n",
+      "Tiggy the tiger thinks meat is yummy!\n",
+      "Iggy the tiger thinks meat is yummy!\n"
+     ]
+    }
+   ],
+   "source": [
+    "feed_animals(zoo, 'Night')"
+   ]
   },
   {
    "cell_type": "markdown",
